2005-07-08  Keith Packard  <keithp@keithp.com>

	* .cvsignore:
	* man/.cvsignore:
	* src/.cvsignore:
	* src/Makefile.am:
	Add .cvsignore files
	Switch _la_CFLAGS for AM_CFLAGS to clean up directory

2005-06-09  Alexander Gottwald  <ago@freedesktop.org>

	* configure.ac: 
	Require renderproto instead of render for pkgconfig

2005-01-16  Chris Larson <kergoth@handhelds.org>

	* configure.ac: Fix to work with automake 1.9.x.

2004-09-19  Carlos Romero  <kidcrash@freedesktop.org>

	* Makefile.am:
	Include man pages in EXTRA_DIST.

2004-02-03  Jim Gettys  <jg@freedesktop.org>

	* AUTHORS: Get a author's list.

2004-01-15  Daniel Stone  <daniel@fooishbar.org>
	* Tag release 1.0.2 for first freedesktop.org clientside lib release.

2004-01-15  Harold L Hunt II <huntharo@msu.edu>
	* Makefile.am: Pass -no-undefined to libtool via LDFLAGS.  Add
	-lXext and -lXrender to LIBADD.

2003-06-12 07:12  eich

	* Xrandr.man:  214. Changed any occurance of x86_64 to AMD64, the
	official name of the
	      architecture (Egbert Eich).
	 213. Removed Copyright sign from man pages as this causes some
	formatters
	      to choke (Egbert Eich).

2003-05-29 14:48  herrb

	* Xrandr.man: Fix manual pages typos (Bugzilla #316, Jens
	Schweikhardt).

2003-05-29 08:04  dawes

	* Xrandr.man: Remove reference to non-existent Xrender(3) man page
	(reported to webmaster).

2003-05-27 15:26  tsi

	* Xrandr.c:  194. IRIX 6.5 build fixes and noise reductions (Marc
	La France).

2003-03-24 20:18  dawes

	* Xrandr-def.cpp:   26. Updates for building on OS/2 (#5650, Frank
	Giessler).

2003-02-07 03:21  eich

	* Xrandr.c: - followup for patch 844 - fixed typo in savage driver

2003-02-05 04:59  eich

	* Xrandr.c:  844. Fixing a double free in libXRandr (Egbert Eich).

2002-11-29 18:27  tsi

	* Xrandr.c: Build fix

2002-11-26 21:37  keithp

	* Xrandr.c: LockDisplay re-executed during configuration fetching

2002-11-03 16:21  keithp

	* Xrandr.c: correct randr reply length computation

2002-10-14 11:01  keithp
