@@ -1,3 +1,80 @@
-man3_MANS = Xrandr.3
+# $Id$
+#
+# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# 
+# Permission to use, copy, modify, distribute, and sell this software and its
+# documentation for any purpose is hereby granted without fee, provided that
+# the above copyright notice appear in all copies and that both that
+# copyright notice and this permission notice appear in supporting
+# documentation.
+# 
+# The above copyright notice and this permission notice shall be included
+# in all copies or substantial portions of the Software.
+# 
+# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS
+# OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
+# MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
+# IN NO EVENT SHALL THE OPEN GROUP BE LIABLE FOR ANY CLAIM, DAMAGES OR
+# OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE,
+# ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
+# OTHER DEALINGS IN THE SOFTWARE.
+# 
+# Except as contained in this notice, the name of the copyright holders shall
+# not be used in advertising or otherwise to promote the sale, use or
+# other dealings in this Software without prior written authorization
+# from the copyright holders.
+# 
 
-EXTRA_DIST = $(man3_MANS)
+libmandir = $(mandir)/man$(LIB_MAN_SUFFIX)
+
+libman_SOURCES = Xrandr.man
+
+libman_DATA = $(libman_SOURCES:man=$(LIB_MAN_SUFFIX)) \
+	      $(Xrandr_shadows:=.$(LIB_MAN_SUFFIX))
+
+BUILT_SOURCES = .shadows.DONE
+
+EXTRA_DIST = $(libman_SOURCES)
+
+CLEANFILES = $(libman_DATA) $(BUILT_SOURCES)
+
+SED = sed
+
+# Strings to replace in man pages
+XORGRELSTRING = @PACKAGE_STRING@
+  XORGMANNAME = X Version 11
+
+MAN_SUBSTS = \
+	-e 's/__vendorversion__/"$(XORGRELSTRING)" "$(XORGMANNAME)"/' \
+	-e 's/__libmansuffix__/$(LIB_MAN_SUFFIX)/g' 
+
+SUFFIXES = .$(LIB_MAN_SUFFIX) .man
+
+.man.$(LIB_MAN_SUFFIX):
+	sed $(MAN_SUBSTS) < $< > $@
+
+# Generate man page shadow files (Replaces InstallManPageAliases from Imake)
+
+Xrandr_shadows =                            \
+    XRRQueryExtension                       \
+    XRRQueryVersion                         \
+    XRRGetScreenInfo                        \
+    XRRFreeScreenConfigInfo                 \
+    XRRSetScreenConfig                      \
+    XRRSetScreenConfigAndRate               \
+    XRRConfigRotations                      \
+    XRRConfigTimes                          \
+    XRRConfigSizes                          \
+    XRRConfigRates                          \
+    XRRConfigCurrentConfiguration           \
+    XRRConfigCurrentRate                    \
+    XRRRootToScreen                         \
+    XRRScreenConfig                         \
+    XRRConfig                               \
+    XRRSelectInput
+
+.shadows.DONE:
+	-rm -f $(Xrandr_shadows:=.$(LIB_MAN_SUFFIX))
+	(for i in $(Xrandr_shadows:=.$(LIB_MAN_SUFFIX)) ; do \
+	 echo .so man$(LIB_MAN_SUFFIX)/Xrandr.$(LIB_MAN_SUFFIX) > $$i; \
+	 done)
